fix z-index over inputs

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -123,7 +123,7 @@ $screen-lg: 1200px;
   position: sticky;
   //position: -webkit-sticky;
   width: 100%;
-  z-index: 11;
+  z-index: 100;
 
   li {
     flex: 1;
